# base-k8s-cloud-app

./: .dockerignore  .env  .gitignore  Cargo.toml  rustfmt.toml
.mirrord/: mirrord.json
.run/: cp-connect-debezium-postgres_linux.run.xml
.sqlx/: query-8ea7bd72b84bfb68933bd27982806d84226fcd9592145ace0de65b5c66be1085.json  query-b7489d48a7261cc7d64f1e2823692ca8d7a5318292d6122f0c657bd8e9396f9d.json  query-d442627247dc229baa505fe9782fec190eac6d3a54fb56e088272de6a8524726.json
app/app-server/: Cargo.toml
app/event-hmb/: Cargo.toml
app/event-hmb/src/: main.rs
app/event-hmb/src/schema/: mod.rs  query.rs
app/event-otype/: Cargo.toml
app/event-otype/src/: main.rs
app/graph-hmb/: Cargo.toml
app/graph-hmb/src/: main.rs  schema.rs
app/graph-hmb/src/entity/: mod.rs  story.rs
app/graph-hmb/src/entity/public/: mod.rs  otype.rs  project.rs  project_otype.rs  schema.rs  schema_object.rs  schema_object_source.rs  source.rs  source_assignable.rs  source_value.rs
app/graph-hmb/src/object/: cursor.rs  mod.rs  name_filter.rs  offset_date_time_filter.rs  offset_date_time_scalar.rs  sort_direction.rs  uuid_filter.rs
app/graph-hmb/src/schema/: mod.rs  mutation.rs  query.rs
app/graph-hmb/src/traits/: general_table.rs  mod.rs
app/run-otype/: Cargo.toml
deploy/: main.tf  versions.tf
deploy/auth/: kustomization.yaml  readme.md
deploy/auth-system/: dex.tf  main.tf  openfga.tf  variable.tf  versions.tf
deploy/event-system/: .terraform.lock.hcl  main.tf  temporal.tf  versions.tf
deploy/events/: kustomization.yaml
deploy/istio-credential/: kustomization.yaml
deploy/istio-system/: main.tf  versions.tf
deploy/migration/: postgres.tf  versions.tf
deploy/operator-system/: main.tf  readme.md  versions.tf
deploy/persistence/: build.sh  kustomization.yaml
deploy/persistence-system/: eleasticsearch.tf  ldap.tf  main.tf  outputs.tf  secrets.tf  variable.tf  versions.tf
deploy/service/: kustomization.yaml
event/notify/: Cargo.toml
event/notify/src/: agent.rs  agent_types.rs  main.rs  notify_types.rs
event/notify/src/utils/: mod.rs  wf_context_ext.rs
event/rest-notify/: Cargo.toml
hmb-auth/: Cargo.toml  Dockerfile
hmb-auth/egoavara-localnet-auth/: .env  .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.ts
hmb-auth/egoavara-localnet-auth/src/: main.ts
hmb-auth/egoavara-localnet-auth/src/assets/: main.css
hmb-auth/egoavara-localnet-auth/src/components/: ConfigureationDrawer.vue  NotificationPopup.vue
hmb-auth/egoavara-localnet-auth/src/router/: index.ts
hmb-auth/egoavara-localnet-auth/src/stores/: display-config.ts  user.ts
hmb-auth/egoavara-localnet-auth/src/views/: Forget.vue  Login.vue  LoginComplete.vue  Main.vue
hmb-auth/public/: index.html
hmb-auth/public/assets/: index-a1d1ac8c.js  index-ce74f90e.css
hmb-auth/src/: main.rs
hmb-auth/src/api/: mod.rs
hmb-auth/src/core/: mod.rs
hmb-auth/src/flow/: consent.rs  login_complete.rs  login_start.rs  login_ui.rs  mod.rs
hmb-graph/: Cargo.toml
hmb-graph/src/: main.rs
hmb-graph/src/api/: mod.rs
hmb-graph/src/api/admin/: mod.rs
hmb-graph/src/api/oauth2/: mod.rs
hmb-graph/src/api/search/: mod.rs
hmb-graph/src/graph/: mod.rs
hmb-graph/src/graph/common/: authority.rs  mod.rs  visibility.rs
hmb-graph/src/graph/extensions/: dataloader.rs  mod.rs  pg_manager.rs  resource_guard.rs
hmb-graph/src/graph/query/: story.rs
hmb-graph/src/graph/types/input/: common.rs  mod.rs
hmb-graph/src/middleware/guard/: abac.rs  config.rs  hint.rs  layer.rs  mod.rs  rbac.rs
lib/bootstrap/: Cargo.toml
lib/bootstrap/src/: lib.rs  postgres.rs  tracing.rs
lib/general-table/: Cargo.toml
lib/general-table/src/: lib.rs
lib/general-table/src/config/: mod.rs
lib/general-table/src/connections/: extension.rs  factory.rs  mod.rs
lib/general-table/src/loader/: mod.rs
lib/general-table/src/object/: cursor.rs  id_ref.rs  mod.rs  name_filter.rs  offset_date_time_filter.rs  uuid_filter.rs
lib/general-table/src/scalar/: mod.rs  offset_date_time_scalar.rs  sort_direction.rs
lib/general-table/src/traits/: filter_field.rs  filter_table.rs  inserting_table.rs  mod.rs  sorting_table.rs  table_definition.rs  table_mutation.rs  updating_table.rs
lib/general-table/src/utils/: mod.rs  table_inserter.rs
lib/gql-impl/: Cargo.toml
lib/gql-impl/src/: cursor.rs  field.rs  filter.rs  filter_default.rs  filter_impl.rs  lib.rs  page.rs  range.rs  sorter.rs  sorter_default.rs  sorter_impl.rs  table.rs  table_filter.rs  table_sorter.rs
lib/gql-impl/src/private/: filter_type.rs  internal_converter.rs
lib/gql-impl/src/types/: configs.rs  mod.rs  orders.rs  state.rs
lib/graph-guard/: Cargo.toml
lib/graph-guard/src/: directive.rs  directive_searcher.rs  errors.rs  field_gaurd.rs  graph_guard.rs  guard_state.rs  lib.rs  openfga.rs  role_gaurd.rs  user.rs
lib/openfga-client/: Cargo.toml
lib/openfga-client/src/: lib.rs
lib/table-traits/: Cargo.toml
lib/table-traits-core/: Cargo.toml
lib/table-traits-core/src/: crate_location.rs  enum_sorter_kind.rs  filter.rs  filter_field.rs  filter_kind.rs  filter_statement.rs  filter_syntax.rs  impl_table_naming.rs  lib.rs  macro_filter.rs  sorter.rs  sorter_kind.rs  sorter_statement.rs  sorter_syntax.rs  sorter_variant.rs  table.rs  table_attr.rs  table_field.rs  token_cursor.rs  token_table_filter.rs
lib/table-traits-core/src/syntax/: filter.rs  filter_option.rs  sorter.rs  sorter_field.rs
lib/table-traits-define/: Cargo.toml
lib/table-traits-define/src/: default_filter.rs  default_sorters.rs  lib.rs
lib/table-traits-impl/: Cargo.toml
lib/table-traits-impl/src/: cursor.rs  field.rs  filter.rs  filter_default.rs  filter_impl.rs  lib.rs  page.rs  range.rs  sorter.rs  sorter_default.rs  sorter_impl.rs  table.rs  table_filter.rs  table_sorter.rs
lib/table-traits-impl/src/prelude/: mod.rs
lib/table-traits-impl/src/private/: filter_type.rs  internal_converter.rs  mod.rs
lib/table-traits-impl/src/types/: errors.rs  mod.rs  options.rs
lib/table-traits-impl/src/utils/: mod.rs  query_helper.rs
lib/table-traits/src/: lib.rs
(+137 files in other folders)
