[package]
edition = "2021"
name = "hmb_auth"
version = "0.1.0"

[dependencies]
async-trait = { version = "0.1.72" }
dotenv = "0.15.0"

lazy_static = { version = "1.4.0" }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

garde={version = "0.15.0", features = []}

axum = {version = "0.6.20", features = ["headers"]}
axum-extra = { version = "0.8.0", features = ["cookie"] }

hyper = { version = "=1.0.0-rc.4", features = ["full"] }

tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tower-hyper-http-body-compat = { version = "0.2", features = ["http1", "server"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "^1"}

tracing = { version = "0.1.37", features = ["default"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

reqwest="0.11.22"

ory-client = "1.2.11"

openidconnect = "3.3.1"
