[package]
edition = "2021"
name = "hmb_graph"
version = "0.3.0"

[dependencies]
async-trait = { version = "0.1.72" }
dotenv = "0.15.0"
regex = "1"
lazy_static = { version = "1.4.0" }
uuid = { version = "1.0" }
itertools = "0.11.0"
delegate = "0.10.0"
chrono = { version = "0.4.26", features = ["serde"] }

tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

garde={version = "0.15.0", features = []}

bevy_ecs = "0.11.3"

openidconnect = {version = "3.3.1", features = []}

governor = {version = "0.6.0"}

axum = {version = "0.6.20", features = ["headers"]}
axum-valid = {version = "0.10.1", default-features = false, features = ["full_garde"]}
axum-prometheus = {version = "0.4.0"}
hyper = { version = "=1.0.0-rc.4", features = ["full"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.4.4", features = ["trace"] }
tower-hyper-http-body-compat = { version = "0.2", features = ["http1", "server"] }


sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

async-graphql = { version = "6.0.7", features = ["tracing", "uuid", "url", "dataloader", "graphiql", "chrono"] }
async-graphql-axum = {version = "6.0.7"}

serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "^1"}
serde_jsonc = {version = "^1"}
serde_json5 = {version = "^0.1.0"}

tracing = { version = "0.1.37", features = ["default"] }
tracing-subscriber = { version = "0.3.17" }

elasticsearch = "8.5.0-alpha.1"



