[package]
name = "notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
####################################################################################################################################
# telemetry
opentelemetry = { version = "0.22.0", features = ["trace", "logs", "metrics"] }
opentelemetry_sdk = { version = "0.22.0", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.3.0", features = ["logs", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.15.0", features = ["serialize", "trace", "logs", "http-proto", "reqwest-rustls", "metrics"] }
opentelemetry-http = { version = "0.11.1", features = [] }

tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.23.0", features = [] }
####################################################################################################################################
# runtime(async)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10" }
futures = { version = "0.3.30" }
####################################################################################################################################
# utils
uuid = { version = "1.8.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["formatting", "serde"] }
anyhow = { version = "1" }
itertools = { version = "0.12", features = [] }
####################################################################################################################################
# serde
serde = { version = "1", features = ["derive"] }
## json
serde_json = { version = "1", features = ["std"] }
json-patch = { version = "1", features = ["diff", "treediff"] }
## serde-util
serde_with = { version = "3", features = [] }
####################################################################################################################################
# external system
## sql(postgres)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
## temporal
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "8efbd22bf997ed846e34e4efd20c06e2dac4c956", features = ["otel"] }
temporal-client = { git = "https://github.com/temporalio/sdk-core", rev = "8efbd22bf997ed846e34e4efd20c06e2dac4c956", features = ["telemetry"] }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core", rev = "8efbd22bf997ed846e34e4efd20c06e2dac4c956", features = [] }