[package]
name = "rest-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
####################################################################################################################################
# runtime(async)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10" }
futures = { version = "0.3.30" }
####################################################################################################################################
# utils
uuid = { version = "1.8.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["formatting"] }
anyhow = { version = "1" }
####################################################################################################################################
# serde
serde = { version = "1", features = ["derive"] }
## json
serde_json = { version = "1", features = ["std"] }
####################################################################################################################################
# external system
## sql(postgres)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
## temporal
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "8efbd22bf997ed846e34e4efd20c06e2dac4c956" }
temporal-client = { git = "https://github.com/temporalio/sdk-core", rev = "8efbd22bf997ed846e34e4efd20c06e2dac4c956" }
temporal-sdk = { git = "https://github.com/temporalio/sdk-core", rev = "8efbd22bf997ed846e34e4efd20c06e2dac4c956" }