[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-http = { workspace = true }

task-local-extensions = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-client-ip = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
serde = { workspace = true }
time = { workspace = true }

tower-http = { workspace = true }

tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
# internal dependencies
graph-guard = { workspace = true }

reqwest = { workspace = true }

sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }


