[package]
name = "general-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tap = { workspace = true }
serde = { workspace = true }
async-graphql = { workspace = true }
async-graphql-value = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
sea-query = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
itertools = { workspace = true }
