[package]
name = "graph-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }
task-local-extensions = { workspace = true }

async-graphql = { workspace = true }
async-graphql-value = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-http = { workspace = true }

openfga-client = { workspace = true }