[package]
name = "table-traits-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
log = "0.4.21"

[dev-dependencies]
pretty_assertions = "1"
prettyplease = "0.2"