[package]
name = "table-traits-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = { version = "0.1" }
async-graphql = { version = "7", features = ["uuid"] }
async-graphql-value = { version = "7", features = [] }
derivative = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }
postcard = { version = "1", features = ["alloc"] }
data-encoding = { version = "2", features = [] }
time = { version = "0.3", features = ["macros", "serde"] }
uuid = { version = "1" }
thiserror = { version = "1" }
table-traits-derive = { path = "../table-traits-derive" }

[dependencies.sea-query]
version = "0"
default-features = false
features = ["derive", "backend-postgres"]



[features]
default = ["with-uuid"]
with-uuid = ["sea-query/with-uuid"]
